# library_catalog

./: README.md  pyproject.toml  requirements.txt
alembic/: env.py
src/: app.py
src/api/: routes.py
src/core/: config.py  exception_handlers.py  exceptions.py  logger.py
src/dependencies/: dependencies.py
src/infrastructure/clients/: jsonbin_client.py
src/infrastructure/clients/openlibrary_client/: book_enricher.py  openlibrary_book_enricher.py  openlibrary_client.py
src/infrastructure/repositories/: file_repository.py  jsonbin_repository.py
src/infrastructure/repositories/db_repository/: database.py  db_repository.py
src/interfaces/: base_api_client.py  base_book_enricher.py  base_book_info_client.py  base_repository.py
src/models/: models.py  schemas.py
src/services/: book_service.py
