[project]
name = "library-catalog"
version = "0.1.0"
description = ""
authors = [
    {name = "alexvodyanitsky",email = "alexvod550@yandex.ru"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi (==0.116.0)",
    "annotated-types (==0.7.0)",
    "anyio (==4.9.0)",
    "certifi (==2025.6.15)",
    "charset-normalizer (==3.4.2)",
    "click (==8.2.1)",
    "colorama (==0.4.6)",
    "dotenv (==0.9.9)",
    "exceptiongroup (==1.3.0)",
    "greenlet (==3.2.3)",
    "h11 (==0.16.0)",
    "httpcore (==1.0.9)",
    "httpx (==0.28.1)",
    "idna (==3.10)",
    "psycopg2 (==2.9.10)",
    "pydantic (==2.11.7)",
    "pydantic-settings (==2.10.1)",
    "pydantic-core (==2.33.2)",
    "pygments (==2.19.2)",
    "python-dotenv (==1.1.1)",
    "requests (==2.32.4)",
    "sniffio (==1.3.1)",
    "sqlalchemy (==2.0.41)",
    "tomli (==2.2.1)",
    "typing-inspection (==0.4.1)",
    "typing-extensions (==4.14.1)",
    "urllib3 (==2.5.0)",
    "uvicorn (==0.35.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool-poetry]
package-mode = false

[tool.poetry.group.dev.dependencies]
alembic = "^1.16.4"
